--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "okpool",
-  "version": "0.0.0",
-  "homepage": ".",
-  "type": "commonjs",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "@nivo/line": "^0.87.0",
-    "@react-icons/all-files": "^4.1.0",
-    "axios": "^1.7.2",
-    "chart.js": "^3.9.1",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.10.0",
-    "nodemon": "^3.1.2",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^4.3.1",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.2.1",
-    "react-redirect": "^1.0.0",
-    "react-router-dom": "^6.23.1",
-    "react-sqlite-hook": "^3.2.1",
-    "sync-mysql": "^3.0.1",
-    "telegraf": "^4.16.3"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
-  },
-  "proxy": "http://localhost:3001"
+	"name": "okpool",
+	"version": "0.0.0",
+	"homepage": ".",
+	"type": "commonjs",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview",
+		"start": "node app.js"
+	},
+	"dependencies": {
+		"@nivo/line": "^0.87.0",
+		"@react-icons/all-files": "^4.1.0",
+		"axios": "^1.7.2",
+		"chart.js": "^3.9.1",
+		"cors": "^2.8.5",
+		"express": "^4.19.2",
+		"mysql": "^2.18.1",
+		"mysql2": "^3.10.0",
+		"nodemon": "^3.1.2",
+		"react": "^18.2.0",
+		"react-chartjs-2": "^4.3.1",
+		"react-dom": "^18.2.0",
+		"react-icons": "^5.2.1",
+		"react-redirect": "^1.0.0",
+		"react-router-dom": "^6.23.1",
+		"react-sqlite-hook": "^3.2.1",
+		"sync-mysql": "^3.0.1",
+		"telegraf": "^4.16.3"
+	},
+	"devDependencies": {
+		"@types/react": "^18.2.66",
+		"@types/react-dom": "^18.2.22",
+		"@vitejs/plugin-react-swc": "^3.5.0",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^8.57.0",
+		"eslint-plugin-react": "^7.34.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.6",
+		"postcss": "^8.4.38",
+		"tailwindcss": "^3.4.3",
+		"vite": "^5.2.0"
+	},
+	"proxy": "http://okpool.ru"
 }
